# DesafioConsultaProcessual

./: .gitignore  .pre-commit-config.yaml  COMMENTS.md  README.md  compose.yaml
backend/: Dockerfile  database.py  main.py  pyproject.toml  schemas.py
backend/data/: lawsuits.json
backend/src/: database.py  main.py  schemas.py  test_main.py
frontend/: .eslintignore  Dockerfile  eslint.config.mjs  jest.config.ts  package-lock.json  package.json
frontend/.husky/: pre-commit
frontend/__tests__/: LandingPageTest.tsx  SearchPageTest.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: About.tsx  AppBar.tsx  CustomAppBar.tsx  Features.tsx  Footer.tsx  Hero.tsx  SearchMenu.tsx
frontend/src/app/contexts/: SearchContext.tsx
frontend/src/app/searchPage/: page.tsx
